# autonomous-outreach-assistant

./: .env.example  .gitignore  README.md  dev_plan.md  docker-compose.yml  prd_mini_crm_ai_crew_v2.md  prd_mini_crm_ai_crew_v3.md  technical_spec.md
backend/: Dockerfile  Dockerfile.worker  pyproject.toml  pytest.ini  railway.toml  railway.worker.toml  worker.py
backend/app/: config.py  main.py
backend/app/auth/: dependencies.py  permissions.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/graphs/batch/: graph.py  state.py
backend/app/graphs/ingestion/: graph.py  state.py
backend/app/jobs/: batch_job.py  ingestion_job.py  outreach_job.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: auth.py  crm.py  health.py  members.py  outreach.py  profile.py  tenant.py
backend/app/services/: arq_pool.py  audit.py  rate_limiter.py  resend.py
backend/app/tools/: crm.py  scrape.py  search.py
backend/fixtures/: outreach_draft.json  product_profile.json  research_output.json  schedule_output.json  seed_jobs.json
backend/scripts/: create_app_db_role.sql  seed_demo.py  test_ingestion_cli.py  test_outreach_cli.py  verify_batch_integration.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_auth.py  test_batch.py  test_health.py  test_members.py  test_outreach.py  test_profile.py  test_rbac_gating.py  test_tenant.py
backend/tests/integration/: README.md  conftest.py  test_migration.py  test_rls_isolation.py
backend/tests/unit/: test_jwt.py  test_permissions.py  test_rate_limiter.py  test_schemas.py
(+41 files in other folders)
