[project]
name = "mini-crm-ai-crew"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "langgraph==0.2.70",
    "langchain-openai==0.2.14",
    "langchain-core==0.3.29",
    "httpx==0.27.2",
    "playwright==1.48.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "arq==0.25.0",
    "resend==2.4.0",
    "python-multipart==0.0.12",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]
